<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="OP80_ERROR" Id="{8a12b49b-329f-490d-8d11-aa3de1ae4a99}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM OP80_ERROR
VAR
	OP80_StepErr_1: TON;
	OP80_Step_Err_2: TON;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Set ERROR ACTIVE
IF ((OP80_GVL.OP80_ErrorWord_0<>0) OR (OP80_GVL.OP80_ErrorWord_1<>0) OR (OP80_GVL.OP80_ErrorWord_2<>0)) THEN
	OP80_GVL.OP80_ErrorActive:= TRUE;
	END_IF

//Reset ErrorActive
IF (OP80_HMI_Reset OR HMI_Reset) THEN 
	OP80_GVL.OP80_ErrorActive:= FALSE;
	OP80_GVL.OP80_ErrorWord_0:= 0;
	OP80_GVL.OP80_ErrorWord_1:= 0;
	OP80_GVL.OP80_ErrorWord_2:= 0;

END_IF

OP80_ErrorWord_0.0:=SR80_Vert_servo.bAxisError;
OP80_ErrorWord_0.1:=NOT OperationEnable;

// Auto Seq Step Error
//Servo not reaching work position
OP80_StepErr_1(IN:=(OP80_AutoSeq=80) , PT:=T#5S , Q=> , ET=> );
IF (OP80_AutoSeq=80 AND NOT OP80_GVL.OP80_SERVO_ON_WRK_1 AND OP80_StepErr_1.Q) THEN
	OP80_GVL.OP80_ErrorWord_0.2:=TRUE;
END_IF

// Servo Not Reached home position or safe-work position
OP80_Step_Err_2(IN:=OP80_AutoSeq=120 , PT:=T#5S , Q=> , ET=> );
IF (OP80_AutoSeq=120 AND NOT SR80_Vert_servo_ctrl.Axis_In_Home AND OP80_Step_Err_2.Q) THEN
	OP80_GVL.OP80_ErrorWord_0.3:=TRUE;
END_IF

//OP20_StepErr_3(IN:=( OP80_HomeRunning AND (OP80_Homing_Seq=10)), PT:=T#5S , Q=> , ET=> );
//IF OP20_StepErr_3.Q THEN
//	OP20_GVL.OP20_ErrorWord_0.4:=TRUE;
//END_IF]]></ST>
    </Implementation>
    <LineIds Name="OP80_ERROR">
      <LineId Id="3" Count="32" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>